Retrieve and delete timetables and assign schedule numbers for first outgoing and return trip.